MODINVUP-93 delete protection (#104)
* MODINVUP-93 configurable blocking of deletions
  - controlled by pattern matching in fields of items, holdings records, instances